--- a/build-umd.env
+++ b/build-umd.env
@@ -1,1 +1,2 @@
+ST_MODE=1
 LDFLAGS_EMCC=-lnodefs.js -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s EXPORT_NAME=SevenZip --post-js post.js --pre-js pre.js
