Link with -O2 flag
Currently, cpp files are compiled with the -O2 flag, but no optimization
flag is specified when linking.

This patch adds the -O2 flag to link times, which significantly reduces
code size (mainly due to JS minification).

--- a/build-umd.env
+++ b/build-umd.env
@@ -1,2 +1,2 @@
 ST_MODE=1
-LDFLAGS_EMCC=-lnodefs.js -lworkerfs.js -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s EXPORT_NAME=SevenZip --post-js post.js --pre-js pre.js
+LDFLAGS_EMCC=-O2 -lnodefs.js -lworkerfs.js -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s EXPORT_NAME=SevenZip --post-js post.js --pre-js pre.js
