Remove -it flags in build script
Fixes CI job

--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/bash -e
 docker build --force-rm -t 7z-build .
-docker run --rm -it -v $PWD:/app -w /app --env-file build-umd.env 7z-build bash -e build_in_docker.sh
+docker run --rm -v $PWD:/app -w /app --env-file build-umd.env 7z-build bash -e build_in_docker.sh
 mv -f 7zz.js 7zz.umd.js
-docker run --rm -it -v $PWD:/app -w /app --env-file build-es6.env 7z-build bash -e build_in_docker.sh
+docker run --rm -v $PWD:/app -w /app --env-file build-es6.env 7z-build bash -e build_in_docker.sh
 mv -f 7zz.js 7zz.es6.js
