--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Build with Docker
-      run: ./build
-      working-directory: ${{ github.workspace }}
+    # Disabled for now as we commit the build artifacts directly to git
+    # - name: Build with Docker
+    #   run: ./build
+    #   working-directory: ${{ github.workspace }}
 
     - name: Install Node.js
       uses: actions/setup-node@v3
